# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml
.github/workflows/: backend-test.yaml  backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml  update-gitops.yaml
kubernetes/: setup_cluster_gitops
scripts/: setup_project
src/backend/: CHANGELOG.md  pyproject.toml
src/demo/: Dockerfile
src/frontend/: CHANGELOG.md  pyproject.toml
