
[project]

name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Abdul", email = "Abdul@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["fastapi>=0.116.1", "httpx>=0.28.1", "unicorn>=2.1.3"]
[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
